# trello_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  models.py
tests/: test_trelloservice.py
tests/unit/: conftest.py  test_cli.py  test_trello_api.py  test_trello_api_basic.py  test_trello_api_mock.py
trello_cli/: README.md  __init__.py  __main__.py  cli.py  config.py  helpers.py  models.py  trello_api.py  trello_authenticate.py  trello_client.py  trello_data.py  trello_service.py  trello_utils.py
trello_cli/app/: models.py
trello_cli/tests/: test_trelloservice.py
