[project]
name = "trellocli_japps25"
version = "0.1.0"
authors = [
  { name = "Jessica", email = "japps156@gmail.com" }
]
description = "Program to modify your Trello boards from your computer's command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "pytest==7.4.2",
    "pytest-mock==3.11.1"
]

[project.urls]
"Homepage" = ""